--- a/client/Front-page/account.css
+++ b/client/Front-page/account.css
@@ -1,79 +1,250 @@
-body{
-    background: #6bb499;
-    font-family: sans-serif;
+body {
+    margin: 0;
     height: 100vh;
-    /* margin-left: 90px; */
-}
-img {
-    /* text-align: left; */
-    /* align-items: flex-start; */
-    width: 400px;
-    height: 90px;
-    margin-top: 10px;
-    
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    margin-top: -70px;
-    border-bottom: 1px solid;
-    margin-bottom: 80px;
-    margin-right: 20px;
+    width: 100%;
+    font-family: Nunito, sans-serif;
+    background-color: #58B09C;
+  }
+  .header{
+    min-height: 120px;
+      border-bottom: 1px solid;
+      margin-left: 10px;
+      margin-right: 10px;
+  }
+  /*//////////////////////// NAVBAR CSS START //////////////////////////////*
+  /* navbar container */
+  .navbar {
+    display: flex;
+    justify-content: flex-end; 
+    align-items: center; 
+    color: #fff;
+    padding: 30px;
+    margin-left: 400px;
   }
   
-  li {
-    float:right;
-    width: 10%;
-    font-size: 25px;
-    margin-bottom: 80px;
+  .navbar-items a {
+    margin-top: 10px;
   }
-  li a {
-    display: block;
+  
+  /* Used to be the old title but switched to icon now */
+  /* .title {
+    font-size: 35px;
+    font-weight: 900;
+    color: #fff;
+    position: absolute;
+    left: 30px;
+    text-align: left;
+    text-transform: capitalize;
+    letter-spacing: 0.5rem;
+    text-shadow: 0.3rem 0.3rem 0.3rem #000;
+  } */
+  
+  #title-img {
+    width: calc(40% + 0.390625vw);
+    height: auto;
+      position: absolute;
+    left: 30px;
+    top: 15px;
+  }
+  @media screen and (max-width: 500px){
+    #title-img{
+    width: 200px;
+    left: 15px;
+    }}
+  
+  
+  /* navbar buttons */
+  a {
+    border-radius: 10px;
+    border: none;
+    font-family: Nunito, sans-serif;
+    font-weight: 650;
     color: #000000;
-    text-align: center;
-    padding: 10px 12px;
+    font-size:calc(10px + 0.5vw);
+    padding: 0.6em 0.9em ;
+    background: #ffffff;
     text-decoration: none;
-    max-width: 720px;
-    margin: 0 1px;
-    background-color: #D9D9D9;
-    border-radius: 10px;
+    cursor: pointer;
+    margin: auto 10px auto 10px;
   }
-  li a:hover {
-    background-color: #000000;
-    color: #58B09C;
-    border-radius: 10px;
+  
+  /* Navbar hover effect */
+  a:hover {
+    background-color: rgb(4, 4, 4);
+    border-color: rgb(200, 200, 200);
+    color: #fff;
+  }
+  
+  
+  /*//////////////////////// NAVBAR CSS END //////////////////////////////*/
+  
+  
+  
+  /*//////////////////////// HAMBURGER CSS START //////////////////////////////*/
+  
+  .container {
+  display: none;
+  }
+  
+  .hamburger-menu {
+  width: 2rem;
+  height: 2rem;
+  position: fixed;
+  top: 2rem;
+  right: 5rem;
+  z-index: 200;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  cursor: pointer;
+  }
+  
+  .line {
+  width: 100%;
+  height: 0.2rem;
+  background-color: white;
+  box-shadow: 0.1rem 0.2rem rgba(0,0,0,0.2);
+  }
+  
+  .sidebar {
+  width: 15rem;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: -40rem;
+  background-color: white;
+  transition: right 0.5s;
+  z-index: 1;
+  }
+  
+  .change .sidebar {
+  right: 0;
+  }
+  
+  .menu {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  }
+  
+  .menu-item {
+  text-align: center;
+  }
+  
+  .menu-link {
+  font-family: Nunito, sans-serif;
+  font-size: 1.5rem;
+  color: black;
+  }
+  /*//////////////////////// HAMBURGER CSS END //////////////////////////////*/
+  @media screen and (max-width: 995px) {
+    /* Hide regular navbar links */
+    .navbar a {
+      display: none;
+    }
+  
+    /* #title-img {
+      display: none;
+    } */
+  
+    /* Show hamburger menu button */
+    .container {
+      display: block;
+    }
+    @media screen and (max-width: 700px){
+      .hamburger-menu {
+     
+      top: 1.5rem;
+      right: 3rem;
+     
+  }}
+  @media screen and (max-width: 360px){
+    .hamburger-menu {
+   
+    top: 1rem;
+    right: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
+   
+  }}
+  
+    /* Show menu on hover, commented out over preferential button click event
+    .navbar .menu-button:hover + .menu,
+    .navbar .menu-button:focus + .menu {
+      display: block;
+    } */
+  
+  
   }
 
-.container{
+.container3{
     border: none solid ;
     padding: 100px 100px;
     justify-content: center;
-    max-width: calc(500vh - 50px);
+    max-width: 500px;
     /* max-width: 500px; */
     border-radius: 20px;
     box-shadow: rgba(15, 19, 66, 0.4) 0px 2px 4px, rgba(8, 56, 17, 0.3) 0px 7px 13px -3px, #370b0b33 0px -3px 0px inset;
     display: flex;
+    
     justify-content: center;
     align-items: center;
-    margin-left: 350px;
-    margin-top: -45px;
-    margin-right: 400px;
+    margin-left: auto;
+    margin-top: 50px;
+    margin-right: auto;
     resize: both;
     /* overflow: auto; */
     overflow:hidden;
     
 }
+@media screen and (max-width: 760px) {
+    .container4{
+        width: fit-content;
+        
+        flex-direction: column;
+    }
+    .container3{
+        margin-top: 0;
+        padding-top: 50px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .container2{
+        margin-top: 20px;
+        border-top: 1px solid;
+        padding-top: 20px;
 
-.container > .container1 {
+    }
+}
+@media screen and (min-width: 760px) {
+    .container4{
+        min-width: 550px;
+       
+    }
+    .container1{
+        border-right: 2px solid black;
+    padding-right: 100px;
+    }
+    .container2{
+        border: none;
+    }
+}
+.container4{
+    display:flex;
+    
+    
+    justify-content: space-between;
+
+
+}
+.container1 {
     /* float: left; */
-    position: inherit;
+    
     left: 0;
     text-overflow: nowrap;
-    border-right: 2px solid black;
-    padding-right: 100px;
+    
     
 }
 /* .container1 ::after{
@@ -88,12 +259,12 @@ ul {
 } */
 
 
-.container > .container2 {
+ .container2 {
     float: right;
-    position: inherit;
+    
     text-overflow: nowrap;
-    padding-left: 100px;
-    margin-top: -78px;
+ 
+    align-self: flex-start;
 }
 input {
     border-radius: 5px;
