--- a/client/assets/CSS/import.css
+++ b/client/assets/CSS/import.css
@@ -12,7 +12,7 @@ body {
   justify-content: flex-end; 
   align-items: center; 
   color: #fff;
-  padding: 30px;
+  padding: 40px 30px 30px 30px;
   margin-left: 400px;
 }
 
@@ -34,7 +34,7 @@ body {
 } */
 
 #title-img {
-  width: calc(40% + 0.390625vw);
+  width: calc(30% + 0.390625vw);
   height: auto;
     position: absolute;
   left: 30px;
